# onehub

./: .gitignore  AGENTS.md  Cargo.toml  OneHub_LICENSE  README.md
apps/db/: Cargo.toml
apps/db/src/: connection.rs  executor.rs  lib.rs  manager.rs  plugin.rs  runtime.rs  sql_format.rs  types.rs
apps/db/src/clickhouse/: connection.rs  plugin.rs
apps/db/src/import_export/: exporter.rs  importer.rs  mod.rs
apps/db/src/import_export/formats/: csv.rs  json.rs  mod.rs  sql.rs
apps/db/src/mssql/: connection.rs  mod.rs  plugin.rs
apps/db/src/mysql/: connection.rs  plugin.rs
apps/db/src/oracle/: connection.rs  plugin.rs
apps/db/src/postgresql/: connection.rs  plugin.rs
apps/db/src/sql_editor/: mod.rs  sql_context_inferrer.rs  sql_context_inferrer_tests.rs  sql_symbol_table.rs  sql_symbol_table_tests.rs  sql_tokenizer.rs  sql_tokenizer_tests.rs
apps/db/src/sqlite/: connection.rs  mod.rs  plugin.rs
apps/db_view/: Cargo.toml
apps/db_view/src/: ai_chat_panel.rs  ai_input.rs  connection_list_panel.rs  data_export_view.rs  data_grid.rs  data_import_view.rs  database_form.rs  database_objects_tab.rs  database_tab.rs  database_view_plugin.rs  db_connection_form.rs  db_tree_event.rs  db_tree_view.rs  filter_editor.rs  lib.rs  multi_text_editor.rs  results_delegate.rs  sql_dump_view.rs  sql_editor.rs  sql_editor_completion_tests.rs  sql_editor_view.rs  sql_result_tab.rs  sql_run_view.rs  table_data_tab.rs  table_designer.rs  table_import_view.rs
apps/db_view/src/clickhouse/: clickhouse_view_plugin.rs  database_form.rs  mod.rs
apps/db_view/src/common/: database_editor_view.rs  db_connection_form.rs  mod.rs  schema_editor_view.rs
apps/db_view/src/import_export/: data_export_view.rs  data_import_view.rs  mod.rs  sql_dump_view.rs  sql_import_view.rs  table_import_view.rs
apps/db_view/src/mssql/: database_form.rs  mod.rs  mssql_view_plugin.rs  schema_form.rs
apps/db_view/src/mysql/: database_form.rs  mod.rs  mysql_view_plugin.rs
apps/db_view/src/oracle/: database_form.rs  oracle_view_plugin.rs
apps/db_view/src/postgresql/: database_form.rs  mod.rs  postgresql_view_plugin.rs  schema_form.rs
apps/db_view/src/sqlite/: database_form.rs  sqlite_view_plugin.rs
apps/db_view/src/table_data/: data_grid.rs  filter_editor.rs  mod.rs  multi_text_editor.rs  results_delegate.rs
crates/core/: Cargo.toml
crates/core/src/: gpui_tokio.rs  lib.rs  reqwest_client.rs  tab_container.rs  themes.rs
crates/core/src/llm/: chat_history.rs  claude_client.rs  manager.rs  mod.rs  openai_client.rs  openai_compat.rs  provider.rs  storage.rs  types.rs
crates/core/src/storage/: manager.rs  mod.rs  models.rs  query_model.rs  query_repository.rs  repository.rs  traits.rs
crates/core/src/utils/: debouncer.rs  mod.rs
crates/provider-claude/: Cargo.toml
crates/provider-claude/src/: lib.rs
crates/provider-deepseek/: Cargo.toml
crates/provider-deepseek/src/: lib.rs
crates/provider-ollama/: Cargo.toml
crates/provider-ollama/src/: lib.rs
crates/provider-openai/: Cargo.toml
crates/provider-openai/src/: lib.rs
crates/provider-qwen/: Cargo.toml
crates/provider-qwen/src/: lib.rs
crates/story/src/stories/: table_story.rs
crates/ui/: Cargo.toml
crates/ui/src/: context_menu_tree.rs  icon.rs  lib.rs
crates/ui/src/form/: field.rs
crates/ui/src/input/: state.rs
crates/ui/src/menu/: popup_menu.rs
crates/ui/src/resizable/: panel.rs
crates/ui/src/table/: delegate.rs  filter.rs  filter_button.rs  filter_list_delegate.rs  filter_panel.rs  filter_state.rs  mod.rs  state.rs
crates/ui/src/theme/: default-theme.json
main/: Cargo.toml
main/src/: home.rs  main.rs  onehup_app.rs  setting_tab.rs
main/src/settings/: llm_providers_view.rs  provider_form_dialog.rs
