[workspace]
default-members = [
    "crates/ui",
    "crates/story",
    "crates/assets",
    "main",
]
members = [
    "crates/macros",
    "crates/story",
    "crates/ui",
    "crates/assets",
    "crates/webview",
    "crates/core",
    "crates/provider-claude",
    "crates/provider-openai",
    "crates/provider-ollama",
    "crates/provider-qwen",
    "crates/provider-deepseek",
    "crates/webview",
    "examples/app_assets",
    "examples/hello_world",
    "examples/input",
    "examples/window_title",
    "examples/dialog_overlay",
    "examples/webview",
    "apps/db",
    "apps/db_view"
, "main"]
resolver = "2"

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]
gpui-component = { path = "crates/ui", version = "0.5.0" }
gpui-component-macros = { path = "crates/macros", version = "0.5.0" }
gpui-component-assets = { path = "crates/assets", version = "0.5.0" }
reqwest_client = { path = "crates/reqwest_client", version = "0.5.0" }

db = { path = "apps/db" }
db_view = { path = "apps/db_view" }
one-core = { path = "crates/core" }
provider-deepseek = { path = "crates/provider-deepseek" }
provider-openai = { path = "crates/provider-openai" }
provider-claude = { path = "crates/provider-claude" }
provider-qwen = { path = "crates/provider-qwen" }
provider-ollama = { path = "crates/provider-ollama" }

gpui = { git = "https://github.com/zed-industries/zed" }
gpui-macros = "0.2.2"
sum-tree = { version = "0.2.0", package = "zed-sum-tree" }
# reqwest = { version = "0.12.15-zed", package = "zed-reqwest" }
reqwest = { git = "https://github.com/zed-industries/reqwest.git", rev = "c15662463bda39148ba154100dd44d3fba5873a4", default-features = false, features = [
    "charset",
    "http2",
    "macos-system-configuration",
    "multipart",
    "rustls-tls-native-roots",
    "socks",
    "stream",
], package = "zed-reqwest", version = "0.12.15-zed" }

anyhow = "1"
log = "0.4"
lsp-types = { version = "0.97.0", features = ["proposed"] }
notify = "7.0.0"
raw-window-handle = "0.6.2"
ropey = { version = "=2.0.0-beta.1", features = [
    "metric_lines_lf",
    "metric_utf16",
] }
rust-i18n = "3"
schemars = "1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
smallvec = "1"
smol = "2"
tracing = "0.1.41"
regex = "1.10.0"
futures = "0.3"
rustls = "0.23.35"
tracing-subscriber = "0.3"
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "bigdecimal", "json", "migrate","macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-util = "0.7.17"
dirs = "6.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = {version = "0.4.23", features = ["serde"]}
rust_decimal = { version = "1.19.0" }
hex = "0.4"
tiberius = "0.12.3"
oracle = "0.6.3"
once_cell = "1.21"
proptest = "1.4"
mysql_async = "0.36.1"
tokio-postgres = { version = "0.7.15",features = ["with-serde_json-1", "with-chrono-0_4", "with-uuid-1"] }
postgres-types = { version = "0.2.11",features = [ "with-chrono-0_4", "with-uuid-1"] }
deadpool-postgres = "0.14.1"
#rusqlite = { version = "0.37", features = ["bundled"] }
bb8-tiberius = "0.16.0"
[workspace.dependencies.windows]
features = ["Wdk", "Wdk_System", "Wdk_System_SystemServices"]
version = "0.58.0"

[workspace.lints.clippy]
almost_complete_range = "allow"
arc_with_non_send_sync = "allow"
borrowed_box = "allow"
dbg_macro = "deny"
let_underscore_future = "allow"
manual_is_multiple_of = "allow"
map_entry = "allow"
module_inception = "allow"
non_canonical_partial_ord_impl = "allow"
reversed_empty_ranges = "allow"
single_range_in_vec_init = "allow"
style = { level = "allow", priority = -1 }
todo = "deny"
type_complexity = "allow"


[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
codegen-units = 1
incremental = true

[profile.dev.package]
resvg = { opt-level = 3 }
rustybuzz = { opt-level = 3 }
taffy = { opt-level = 3 }
ttf-parser = { opt-level = 3 }

[workspace.metadata.typos]
files.extend-exclude = ["**/fixtures/*"]
