[package]
name = "main"
version = "0.1.0"
publish.workspace = true
edition.workspace = true

[dependencies]
gpui = { workspace = true }
gpui-macros = { workspace = true }
gpui-component = { workspace = true, features = ["tree-sitter-languages"] }
gpui-component-assets = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust-i18n = { workspace = true }
lsp-types = { workspace = true }
async-trait = { workspace = true }
db = { workspace = true }
db_view = { workspace = true }
one-core.workspace = true
provider-deepseek.workspace = true
provider-openai.workspace = true
provider-claude.workspace = true
provider-qwen.workspace = true
provider-ollama.workspace = true
[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[lints]
workspace = true
