[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
once_cell.workspace = true
tracing.workspace = true
hex.workspace = true
gpui.workspace = true
gpui-component.workspace = true
chrono.workspace = true
tiberius.workspace = true
tokio-util = { workspace = true, features = ["compat"] }
oracle.workspace = true
one-core.workspace = true

[dev-dependencies]
proptest = { workspace = true }