[package]
name = "one-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes = "1"
futures.workspace = true
http-body-util = "0.1"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
dirs.workspace = true
gpui.workspace = true
gpui-component.workspace = true
chrono.workspace = true
uuid.workspace = true
rustls.workspace = true
regex.workspace = true
rustls-platform-verifier = "0.5.0"
